# naver_searchad_mcp

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  __main__.py  bids_api.py  credentials.py  fastmcp_server.py  keyword_api.py  pyproject.toml
dxt_extension/: .dxtignore  build_vendor.ps1  manifest.json  naver-searchad.dxt  prepare_embedded_python.ps1
dxt_extension/naver_searchad_mcp/: __init__.py  bids_api.py  credentials.py  fastmcp_server.py  keyword_api.py
dxt_extension/runtime/win32/python/: python311._pth
dxt_extension/server/: main.py
dxt_extension/server/lib/charset_normalizer-3.4.3.dist-info/: RECORD
dxt_extension/server/lib/fastmcp-0.2.0.dist-info/: RECORD
dxt_extension/server/lib/fastmcp-2.11.3.dist-info/: RECORD
dxt_extension_host/server/: main.py
