[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naver-searchad-mcp"
version = "0.2.6"
description = "Standalone FastMCP server for Naver SearchAd (keyword stats & bid estimates)"
readme = "README.md"
authors = [{name="Your Name", email="you@example.com"}]
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=0.2.0",
  "requests>=2.31.0"
]

[project.scripts]
naver-searchad-mcp = "naver_searchad_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["naver_searchad_mcp"]
